[#1721] Fusion traductions du thème et de l'appli
Change-Id: I35796e02d0bdbb4fa4c9369a09fd926b2b3e4fdf
Refs: #1721

--- a/src/vigilo/themes/templates/vigiboard/silence.html
+++ b/src/vigilo/themes/templates/vigiboard/silence.html
@@ -18,11 +18,10 @@
     <script type="text/javascript" src="${tg.url('/js/lib/jxlib.js')}"></script>
     <script type="text/javascript">Jx.baseURL = '${tg.url("/js/lib")}';</script>
     <!--!
-        "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
-        avant "i18n", qui doit être chargé avant nos scripts.
+        "js/lib/babel.js" doit être chargé avant "i18n",
+        qui doit être chargé avant nos scripts.
     -->
     <script type="text/javascript" src="${tg.url('/js/lib/babel.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/lib/babelThemes.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
     <script type="text/javascript" src="${tg.url('/js/silence.js')}"></script>
 </head>
