--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -57,11 +57,10 @@
     <script type="text/javascript">Jx.baseURL = '${tg.url("/js/lib")}';</script>
 
     <!--!
-        "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
-        avant "i18n", qui doit être chargé avant nos scripts.
+        "js/lib/babel.js" doit être chargé avant "i18n",
+        qui doit être chargé avant nos scripts.
     -->
     <script type="text/javascript" src="${tg.url('/js/lib/babel.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/lib/babelThemes.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
 
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.js')}"></script>
