--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -31,11 +31,10 @@
     </script>
 
     <!--!
-        "js/lib/babel.js" et "js/lib/babelThemes.js" doivent être chargés
-        avant "i18n", qui doit être chargé avant nos scripts.
+        "js/lib/babel.js" doit être chargé avant "i18n",
+        qui doit être chargé avant nos scripts.
     -->
     <script type="text/javascript" src="${tg.url('/js/lib/babel.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/lib/babelThemes.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
 
     <script type="text/javascript" src="${tg.url('/js/grouptree.js')}"></script>
