--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -85,7 +85,7 @@ ${toolbar()}
 </py:with>
 
 <div style="display: none">
-    ${search_form(search)}
+    ${search_form.display(value=search)}
 </div>
 
 <script type="text/javascript">
