--- a/src/vigilo/themes/templates/vigimap/copymap_form.html
+++ b/src/vigilo/themes/templates/vigimap/copymap_form.html
@@ -1,8 +1,5 @@
 <div xmlns:py="http://genshi.edgewall.org/">
     <fieldset>
-    ${copymap_form(kw, onsubmit=onsubmit)}
+    ${copymap_form(value=kw).display(onsubmit=onsubmit)}
     </fieldset>
-
 </div>
-<!-- Ceci est un commentaire
--->
