--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -55,12 +55,12 @@
     padding: 15px;
     border: 1px solid grey;
     -moz-border-radius:8px;
-    -webkit-border-radius:8px;   
-    border-radius:8px;   
+    -webkit-border-radius:8px;
+    border-radius:8px;
 }
 
 /* Corrige un problème de marge sur IE */
-#link_form fieldset#link_form_fieldsetchoice {
+#link_form fieldset#link_form\:choice {
     display: block;
 }
 
@@ -68,18 +68,18 @@
     color: black;
 }
 
-#link_form.hlslinkform fieldset#link_form_fieldsethlslink,
-#link_form fieldset#link_form_fieldsetllslink,
-#link_form.segmentform fieldset#link_form_fieldsetsegment {
+#link_form.hlslinkform fieldset#link_form\:fieldsethlslink,
+#link_form fieldset#link_form\:fieldsetllslink,
+#link_form.segmentform fieldset#link_form\:fieldsetsegment {
     margin: 0px;
     padding: 0px;
     border: 0px;
 }
 
 /* Les descriptions sont uniquement affichées lors des créations de lien */
-#link_form.hlslinkform fieldset#link_form_fieldsethlslink div.fielddescription,
-#link_form.llslinkform fieldset#link_form_fieldsetllslink div.fielddescription,
-#link_form.segmentform fieldset#link_form_fieldsetsegment div.fielddescription {
+#link_form.hlslinkform span,
+#link_form.llslinkform span,
+#link_form.segmentform span {
     display: none;
 }
 
@@ -130,7 +130,7 @@
     font-size: 90%;
 }
 
-#link_form input#link_form_submit {
+#link_form input[type="submit"] {
     float: right;
     margin: 0px 40px 10px;
     padding: 2px 5px;
