--- a/src/vigilo/themes/templates/vigimap/link_form.html
+++ b/src/vigilo/themes/templates/vigimap/link_form.html
@@ -1,3 +1,3 @@
 <div xmlns:py="http://genshi.edgewall.org/" py:strip="">
-${link_form(kw, onsubmit=onsubmit, **child_args)}
+${link_form(value=kw, onsubmit=onsubmit).display()}
 </div>
