--- a/src/vigilo/themes/templates/vigimap/mapnode_form.html
+++ b/src/vigilo/themes/templates/vigimap/mapnode_form.html
@@ -1,3 +1,3 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    ${mapnode_form(kw, onsubmit=onsubmit, child_args=child_args)}
+    ${mapnode_form(value=kw, onsubmit=onsubmit).display(readonly=generated)}
 </div>
