--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -24,10 +24,6 @@
     float: left;
 }
 
-#home {
-    float: left;
-}
-
 h1 {
     font-size: 110%;
     margin: 0 0.2em 0 -58px;
@@ -215,22 +211,22 @@ h1 a:hover {
 }
 .status-critical,
 .status-down {
-    background-color: #F88;
-    border: 1px solid #C80000;
+    background-color: #d9534f;
+    border: 1px solid #d43f3a;
 }
 .status-warning {
-    background-color: #FF0;
-    border: 1px solid #C8C800;
+    background-color: #f0ad4e;
+    border: 1px solid #eea236;
 }
 .status-ok,
 .status-up {
-    background-color: #73DE78;
-    border: 1px solid #5DB460;
+    background-color: #5cb85c;
+    border: 1px solid #4cae4c;
 }
 .status-unknown,
 .status-unreachable {
-    background-color: #DDD;
-    border: 1px solid #555;
+    background-color: #777777;
+    border: 1px solid #5e5e5e;
 }
 
 .status-edit {
@@ -278,6 +274,10 @@ h1 a:hover {
 }
 #details .jxDialogContent {
     padding: 0.5em;
+}
+
+#details .status {
+    color: white;
 }
 
 #details p.status {
