--- a/src/vigilo/themes/templates/vigigraph/main_simplified.html
+++ b/src/vigilo/themes/templates/vigigraph/main_simplified.html
@@ -24,22 +24,25 @@
         si vous changez l'en-tête.
     -->
     <div id="header">
-        <span id="home">
-            <a href="${tg.url(tg.config.get('home_link', '/'))}">
-                <img alt="${''}" src="${tg.url('/images/home.png')}"/>
+        <span py:if="tg.config.get('home_link')" class="header_icon">
+            <a href="${tg.url(tg.config['home_link'])}">
+              <img alt="${''}" src="${tg.url('/images/home.png')}"/>
             </a>
         </span>
 
-        <div class="header_icons">
+        <span class="header_icon">
+            ${search_button()}
+        </span>
 
-            <div class="header_icon">
-                <py:if test="tg.config.get('help_link')">
+        <span class="header_icon">
+            <py:if test="tg.config.get('help_link')">
                 <a href="${tg.config['help_link']}">
                     <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
                 </a>
-                </py:if>
-            </div>
+            </py:if>
+        </span>
 
+        <div class="header_icons">
             <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
             <div py:if="tg.auth_stack_enabled and request.identity and not 'external' in request.identity.get('tokens', ())" class="header_icon">
                 <a href="${tg.url('/logout_handler')}">
@@ -47,8 +50,6 @@
                 </a>
             </div>
         </div>
-
-        <h1><a href="${tg.url('/')}">${"VigiGraph"}</a></h1>
     </div>
 
     <div id="content">
