--- a/src/vigilo/themes/templates/common/reverse_proxy_hosts.html
+++ b/src/vigilo/themes/templates/common/reverse_proxy_hosts.html
@@ -13,8 +13,8 @@
 <body>
   <p>Select the monitored device whose data should be displayed:</p>
   <ul>
-    <li py:for="host in hosts">
-      <a href="${tg.url('./%s/' % quote(host, ''))}">${host}</a>
+    <li py:for="host in hosts" py:with="qhost = quote(host, '')">
+      <a href="${tg.url('./%s/%s' % (qhost, default_url.format(host=qhost)))}">${host}</a>
     </li>
   </ul>
 </body>
