Fix search form display for VigiGraph
Change-Id: Ieefd34178c5d908fd838b16ff36bcdaab06e6de5

--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -88,8 +88,8 @@
         <div py:replace="select('*|text()')"/>
     </div>
 
-    <!--! Container utilisé par le formulaire de recherche. -->
-    ${search_form.display()}
+    <!--! Insertion de la macro Genshi correspondant au formulaire de recherche. -->
+    ${search_form()}
 
     <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
         <div py:strip="True" py:if="flash" py:content="XML(flash)" />
